Fixed scrollbar

--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -20,28 +20,47 @@ html, body, .container-fluid {
 
 textarea {
   resize: none;
+  overflow: hidden;
 }
 
+#container {
+  display: flex;
+  min-height: 100vh;
+}
 
 .split {
-    height: 100%;
-    width: 50%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
+  width: 50%;
+  padding-top: 20px;
 }
 
 .left {
-    left: 0;
-    background-color: white;
+  background-color: white;
 }
 
 .right {
-    right: 0;
-    background-color: #E0E0E0;
+  background-color: #E0E0E0;
 }
-.right h1 {
-  color: black;
+
+html, body {
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+
+/* Scrollbar theme */
+body::-webkit-scrollbar {
+    width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
